--- a/angular.json
+++ b/angular.json
@@ -85,9 +85,12 @@
               }
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+                "node_modules/aos/dist/aos.js"
+            ]
           }
         }
       }
