--- a/angular.json
+++ b/angular.json
@@ -85,8 +85,9 @@
               }
             ],
             "styles": [
-              "node_modules/aos/dist/aos.css",
-              "src/styles.css"
+              "src/styles.css",
+                "node_modules/aos/dist/aos.css"
+
             ],
             "scripts": [
                 "node_modules/aos/dist/aos.js"
