--- a/angular.json
+++ b/angular.json
@@ -62,17 +62,21 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "tfg-music-hub:build:production"
-            },
-            "development": {
-              "buildTarget": "tfg-music-hub:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
+  "builder": "@angular-devkit/build-angular:dev-server",
+  "configurations": {
+    "production": {
+      "buildTarget": "tfg-music-hub:build:production"
+    },
+    "development": {
+      "buildTarget": "tfg-music-hub:build:development",
+    }
+  },
+  "defaultConfiguration": "development",
+  "options": {
+    "proxyConfig": "proxy.conf.json"
+  }
+}
+,
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
